Stage 2.2 stats tables (using booktabs now).

--- a/06_mirrorshades_studies_results/mirrorshades_studies_results.tex
+++ b/06_mirrorshades_studies_results/mirrorshades_studies_results.tex
@@ -290,69 +290,57 @@ This relationship is reflected calculating the standard deviation in pitch \& ya
 
 \begin{table}
 \begin{center}
-\begin{minipage}[t]{.47\linewidth}
+\begin{minipage}[t]{.45\linewidth}
 \begin{center}
-\begin{tabular}{|c|c|c|}
-\hline
+\begin{tabularx}{\textwidth}{c *{3}{>{\centering\arraybackslash}X}}
+\toprule
 
 \textbf{Participant} & \textbf{Pitch (\textdegree)} & \textbf{Yaw (\textdegree)} \\
 
-\hline
+\midrule
 
 1 & 14.977 & 86.211 \\
 
-\hline
-
 3 & 16.684 & 60.545 \\
-
-\hline
 
 4 & 10.516 & 53.805 \\
 
-\hline
-
 5 & no data & no data \\
-
-\hline
 
 6 & 16.172 & 92.416 \\
 
-\hline
-\end{tabular}
+\bottomrule
+\end{tabularx}
 \caption{Standard deviation in pitch \& yaw for traditional scenario.}
 \label{sdpitchyawtrad}
 \end{center}
 \end{minipage}
 %
-\begin{minipage}[t]{.47\linewidth}
+\begin{minipage}[t]{.02\linewidth}
+\hfill%
+\end{minipage}
+%
+\begin{minipage}[t]{.45\linewidth}
 \begin{center}
-\begin{tabular}{|c|c|c|}
-\hline
+\begin{tabularx}{\textwidth}{c *{3}{>{\centering\arraybackslash}X}}
+\toprule
 
 \textbf{Participant} & \textbf{Pitch (\textdegree)} & \textbf{Yaw (\textdegree)} \\
 
-\hline
+\midrule
 
 1 & 19.186 & 63.427 \\
 
-\hline
-
 3 & 24.228 & 51.666 \\
-
-\hline
 
 4 & 11.723 & 44.526 \\
 
-\hline
-
 5 & 16.542 & 39.601 \\
-
-\hline
 
 6 & 21.999 & 97.122 \\
 
-\hline
-\end{tabular}
+\bottomrule
+\end{tabularx}
 \caption{Standard deviation in pitch \& yaw for PR scenario (RW \& VR periods combined).}
 \label{sdpitchyawpr}
 \end{center}
@@ -418,69 +406,57 @@ Calculating the mean standard deviation in yaw for both RW \& VR periods, weight
 
 \begin{table}
 \begin{center}
-\begin{minipage}[t]{.47\linewidth}
+\begin{minipage}[t]{.45\linewidth}
 \begin{center}
-\begin{tabular}{|c|c|c|}
-\hline
+\begin{tabularx}{\textwidth}{c *{3}{>{\centering\arraybackslash}X}}
+\toprule
 
 \textbf{Participant} & \textbf{RW (\textdegree)} & \textbf{VR (\textdegree)} \\
 
-\hline
+\midrule
 
 1 & 13.325 & 17.554 \\
 
-\hline
-
 3 & 12.194 & 24.662 \\
-
-\hline
 
 4 & 6.133 & 6.133 \\
 
-\hline
-
 5 & 12.193 & 12.797 \\
-
-\hline
 
 6 & 15.712 & 15.349 \\
 
-\hline
-\end{tabular}
+\bottomrule
+\end{tabularx}
 \caption{Weighted mean sd in pitch for PR scenario.}
 \label{sdpitchtab}
 \end{center}
 \end{minipage}
 %
-\begin{minipage}[t]{.47\linewidth}
+\begin{minipage}[t]{.02\linewidth}
+\hfill%
+\end{minipage}
+%
+\begin{minipage}[t]{.45\linewidth}
 \begin{center}
-\begin{tabular}{|c|c|c|}
-\hline
+\begin{tabularx}{\textwidth}{c *{3}{>{\centering\arraybackslash}X}}
+\toprule
 
 \textbf{Participant} & \textbf{RW (\textdegree)} & \textbf{VR (\textdegree)} \\
 
-\hline
+\midrule
 
 1 & 25.545 & 39.887 \\
 
-\hline
-
 3 & 11.702 & 60.636 \\
-
-\hline
 
 4 & 18.032 & 15.300 \\
 
-\hline
-
 5 & 23.155 & 29.274 \\
-
-\hline
 
 6 & 41.717 & 47.440 \\
 
-\hline
-\end{tabular}
+\bottomrule
+\end{tabularx}
 \caption{Weighted mean sd in yaw for PR scenario.}
 \label{sdyawtab}
 \end{center}
@@ -675,44 +651,31 @@ For all participants there was again substantially more yaw change than pitch ch
 
 \begin{table}
 \begin{center}
-\begin{minipage}[t]{.47\linewidth}
+\begin{minipage}[t]{.45\linewidth}
 \begin{center}
-\begin{tabular}{|c|c|c|}
-\hline
+\begin{tabularx}{\textwidth}{c *{3}{>{\centering\arraybackslash}X}}
+\toprule
 
 \textbf{Participant} & \textbf{Pitch (\textdegree)} & \textbf{Yaw (\textdegree)} \\
 
-\hline
+\midrule
 
 7 & 13.013 & 87.822 \\
 
-\hline
-
 8 & 13.917 & 94.436 \\
-
-\hline
 
 9 & 12.039 & 87.956 \\
 
-\hline
-
 10 & no data & no data \\
-
-\hline
 
 11 & no data & no data \\
 
-\hline
-
 12 & no data & no data \\
-
-\hline
 
 13 & no data & no data \\
 
-\hline
-
-\end{tabular}
+\bottomrule
+\end{tabularx}
 \caption{Standard deviation in pitch \& yaw for traditional scenario.}
 \label{2-1-sd-trad}
 \end{center}
@@ -722,85 +685,65 @@ For all participants there was again substantially more yaw change than pitch ch
 
 \begin{table}
 \begin{center}
-\begin{minipage}[t]{.47\linewidth}
+\begin{minipage}[t]{.45\linewidth}
 \begin{center}
-\begin{tabular}{|c|c|c|}
-\hline
+\begin{tabularx}{\textwidth}{c *{3}{>{\centering\arraybackslash}X}}
+\toprule
 
 \textbf{Participant} & \textbf{Pitch (\textdegree)} & \textbf{Yaw (\textdegree)} \\
 
-\hline
+\midrule
 
 7 & no data & no data \\
 
-\hline
-
 8 & 10.253 & 102.254 \\
-
-\hline
 
 9 & 13.734 & 84.076 \\
 
-\hline
-
 10 & 17.833 & 84.578 \\
-
-\hline
 
 11 & 11.540 & 76.445 \\
 
-\hline
-
 12 & 19.635 & 74.696 \\
-
-\hline
 
 13 & 22.095 & 91.827 \\
 
-\hline
-\end{tabular}
+\bottomrule
+\end{tabularx}
 \caption{Standard deviation in pitch \& yaw for PR scenario with transitions 1-3 (RW \& VR periods combined).}
 \label{2-1-sd-1-3}
 \end{center}
 \end{minipage}
 %
-\begin{minipage}[t]{.47\linewidth}
+\begin{minipage}[t]{.02\linewidth}
+\hfill%
+\end{minipage}
+%
+\begin{minipage}[t]{.45\linewidth}
 \begin{center}
-\begin{tabular}{|c|c|c|}
-\hline
+\begin{tabularx}{\textwidth}{c *{3}{>{\centering\arraybackslash}X}}
+\toprule
 
 \textbf{Participant} & \textbf{Pitch (\textdegree)} & \textbf{Yaw (\textdegree)} \\
 
-\hline
+\midrule
 
 7 & no data & no data \\
 
-\hline
-
 8 & 11.493 & 89.531 \\
-
-\hline
 
 9 & 12.365 & 95.144 \\
 
-\hline
-
 10 & 14.059 & 90.429 \\
-
-\hline
 
 11 & 8.354 & 82.279 \\
 
-\hline
-
 12 & 22.202 & 75.425 \\
-
-\hline
 
 13 & 19.530 & 62.321 \\
 
-\hline
-\end{tabular}
+\bottomrule
+\end{tabularx}
 \caption{Standard deviation in pitch \& yaw for PR scenario with transitions 1-4 (RW \& VR periods combined).}
 \label{2-1-sd-1-4}
 \end{center}
@@ -842,85 +785,65 @@ When comparing head movement as mean standard deviation weighted by duration of 
 
 \begin{table}
 \begin{center}
-\begin{minipage}[t]{.47\linewidth}
+\begin{minipage}[t]{.45\linewidth}
 \begin{center}
-\begin{tabular}{|c|c|c|}
-\hline
+\begin{tabularx}{\textwidth}{c *{3}{>{\centering\arraybackslash}X}}
+\toprule
 
 \textbf{Participant} & \textbf{RW (\textdegree)} & \textbf{VR (\textdegree)} \\
 
-\hline
+\midrule
 
 7 & no data & no data \\
 
-\hline
-
 8 & 41.680 & 42.228 \\
-
-\hline
 
 9 & 19.274 & 31.133 \\
 
-\hline
-
 10 & 13.541 & 16.758 \\
-
-\hline
 
 11 & 28.030 & 16.751 \\
 
-\hline
-
 12 & 38.654 & 28.494 \\
-
-\hline
 
 13 & 29.623 & 39.717 \\
 
-\hline
-\end{tabular}
+\bottomrule
+\end{tabularx}
 \caption{Weighted mean sd in yaw for scenario 1-3.}
 \label{mean-sd-yaw-1-3}
 \end{center}
 \end{minipage}
 %
-\begin{minipage}[t]{.47\linewidth}
+\begin{minipage}[t]{.02\linewidth}
+\hfill%
+\end{minipage}
+%
+\begin{minipage}[t]{.45\linewidth}
 \begin{center}
-\begin{tabular}{|c|c|c|}
-\hline
+\begin{tabularx}{\textwidth}{c *{3}{>{\centering\arraybackslash}X}}
+\toprule
 
 \textbf{Participant} & \textbf{RW (\textdegree)} & \textbf{VR (\textdegree)} \\
 
-\hline
+\midrule
 
 7 & 20.228 & 50.963 \\
 
-\hline
-
 8 & 10.783 & 50.593 \\
-
-\hline
 
 9 & 13.579 & 27.398 \\
 
-\hline
-
 10 & 10.7334 & 34.981 \\
-
-\hline
 
 11 & 13.500 & 13.513 \\
 
-\hline
-
 12 & 16.248 & 50.326 \\
-
-\hline
 
 13 & 7.269 & 57.162 \\
 
-\hline
-\end{tabular}
+\bottomrule
+\end{tabularx}
 \caption{Weighted mean sd in yaw for scenario 1-4.}
 \label{mean-sd-yaw-1-4}
 \end{center}
@@ -1229,6 +1152,8 @@ Mimicking responses from earlier stage interviews, one participant reported expe
 
 \subsection{Log Data}
 
+\subsubsection{Considering all scenarios (traditional \& PR)}
+
 Once again, variance in yaw dominated during all three scenarios (traditional \& both PR scenarios) over variance in pitch, which is illustrated in figure \ref{14-pitch-yaw-trad-75-25-50-50.png} which shows pitch \& yaw against time for participant 14 for the traditional scenario at left, the 75/25 scenario in the middle \& the 50/50 scenario on the right (note that the 75/25 scenario is of substantially longer duration than the other two scenarios, thus the marked difference in initial appearance).
 
 \begin{figure}[h]
@@ -1319,6 +1244,32 @@ The main new observations that come to light when comparing log data for the two
 
 In combination with interview feedback, these log data support the notion that the 50/50 scenario was more engaging, with participants not finding it necessary to perform transitions to VR as frequently in order to perceive enough VR stimuli to engage with the combined VR \& VR content.
 
+When considering the distribution of variance in head pitch \& yaw in relation to whether participants were viewing the default position or VR, maximum variance in stage 2.2 was no longer as restricted to the VR periods. Participant 14 in particular frequently displayed maximum variance when viewing the default position, more so than when viewing VR, as shown by figure \ref{14-pitch-yaw-75_25.png}. While this is understandable in the sense that the participants no longer needed to perform a transition to VR in order to see the VR environment, it is worth highlighting that by allowing the user to see the VR environment in this manner means that they were simultaneously perceiving more angles of the RW environment which in earlier stages of evaluation they may not have seen as maximum variance in pitch \& yaw only occurred when they were viewing predominantly VR visual stimuli via the DK1.
+
+\begin{figure}[h]
+	\begin{center}
+	\includegraphics[width=\textwidth]{2.2/14-pitch-yaw-75_25.png}
+	\caption{Pitch \& yaw against time for participant 14 in 75/25 scenario, showing default/VR transitions.}
+	\label{14-pitch-yaw-75_25.png}
+	\end{center}
+\end{figure}
+
+%=====================
+
+\subsubsection{Walking \& Head Movement}
+
+Concerning the relationship between variance in pitch \& yaw compared to whether participants were actively walking, most participants exhibited similar behaviour to previous stages of evaluation with maximum variance restricted to periods in which they were standing still.
+
+However as can be seen in figure \ref{17-pitch-yaw-distance-moved-75-25.png} participant 17 exhibited extremely restricted head movement, only moving their head from looking straight ahead in the direction of moment upon reaching the altar end of the chapel \& turning around to return. Intuitively one might suppose that for a participant who did not feel sure of themselves when walking with the apparatus, not having a 100\% RW view would result in this static head behaviour as they focussed all of their attention on what lessened amount of the RW environment they could see in order to successfully navigate. However this participant did not report such lack of surety in the interview, although did mention performing fewer transitions in the 50/50 scenario as they were \textit{``trying to make sure I didn't bump into anything''} \& reviewing the video recording of this participant completing the 75/25 scenario showed them to walk comfortably \& deliberately. Thus the mostly static head activity is as likely to be attributable to simple disinterest with the environments or misunderstanding of the purpose of the scenarios.
+
+\begin{figure}[h]
+	\begin{center}
+	\includegraphics[width=\textwidth]{2.2/17-pitch-yaw-distance-moved-75-25.png}
+	\caption{Pitch \& yaw against time aligned with distance moved against time for participant 17 in 75/25 scenario, showing default/VR transitions.}
+	\label{17-pitch-yaw-distance-moved-75-25.png}
+	\end{center}
+\end{figure}
+
 %=========================================================================================================
 
 \subsection{IPQ}
@@ -1330,6 +1281,8 @@ SP was reduced in the 75/25 scenario, to a level slightly lower than that in bot
 INV was reduced in the 75/25 scenario \& further reduced in the 50/50 scenario, as was to be expected. Interestingly however, the INV results for both PR scenarios in stage 2.2 were notably higher than those for the PR scenarios of stage 2.1, a discrepancy that is not contained within the higher INV for the traditional scenario in stage 2.2 compared to stage 2.1.
 
 REAL was reduced in the 75/25 scenario to almost exactly the same level as both PR scenarios in stage 2.1, however for the 50/50 scenario REAL was only reduced a miniscule amount (a reduction of 0.118 from 2.563 to 2.438). This implies that the increased visibility of the VR environment when perceiving the RW environment helped to enhance the perceived realness of the VR environment.
+
+When considering SP3 \& INV2 in isolation, the mean SP3 for the traditional scenario is confusingly low at 1.75 (table \ref{sp3-inv2-2-2-table}). This is especially odd considering the relatively high mean for the overall SP subscale in the traditional scenario of 4.3 (table \ref{sp-2-2-table}. It is also completely out of line with the mean SP3 for the traditional scenario from stage 2.1 of 4.5 (table \ref{sp-2-1-table}), which was in keeping with the overall SP mean of 4.6 (table \ref{sp3-inv2-2-1-table}) for the traditional scenario in stage 2.1. This oddity could be explained by confusion among the stage 2.2 participants over the wording of SP3, which presents a negative - \textit{``I did \textbf{not} feel present in the virtual space''} (emphasis own), anchored between \textit{``did not feel''} \& \textit{``felt present''}.
 
 \begin{table}
 \begin{center}
@@ -1437,14 +1390,11 @@ traditional & 1.75 & 2.217 & 5 & 0.816 \\
 \end{center}
 \end{table}
 
-The mean SP3 for the traditional scenario is confusingly low at 1.75 (table \ref{sp3-inv2-2-2-table}). This is especially odd considering the relatively high mean for the overall SP subscale in the traditional scenario of 4.3 (table \ref{sp-2-2-table}. It is also completely out of line with the mean SP3 for the traditional scenario from stage 2.1 of 4.5 (table \ref{sp-2-1-table}), which was in keeping with the overall SP mean of 4.6 (table \ref{sp3-inv2-2-1-table}) for the traditional scenario in stage 2.1.
-
-This oddity could be explained by confusion among the stage 2.2 participants over the wording of SP3, which presents a negative - \textit{``I did not feel present in the virtual space''}, anchored between \textit{``did not feel''} \& \textit{``felt present''}.
-
-
 %=========================================================================================================
 
 \subsection{Conclusions}
+
+It is worth considering that while a default view that presents \textless 100\% RW does seem to increase participant exposure to angles of the RW environment other than those required to perceive when walking, by allowing users to look around at the VR environment when stationary without needing to perform a transition to 100\% VR \& thus losing all visual stimuli from the RW environment, that for a participant who does feel less comfortable walking with the apparatus that not having a 100\% RW view available will likely have a detrimental effect to the experience as a whole. Furthermore, if a user wishes to inspect something in the RW environment in particular detail, not being able to activate a 100\% RW view may well reduce their ability to discern detail in this object, again hampering the overall PR experience. Although this stage 2.2 evaluation prevented users from occupying a position at the RW extreme of the locus of attention axis by always showing them at least 25\% or 50\% of the VR environment, this is not strictly a sensible approach. A sensible approach for real world application would perhaps be to allow toggling between a 100\% RW view \& one a (for example) 50/50 view, such that users could reap the benefits of the combined view but while maintaining the ability to transition back to a 100\% view \& the RW extreme of the focus of attention axis when the situation demanding it.
 
 %=========================================================================================================
 
