--- a/05_mirrorshades_design_implementation/mirrorshades_design_implementation.tex
+++ b/05_mirrorshades_design_implementation/mirrorshades_design_implementation.tex
@@ -131,18 +131,20 @@ The PS3 Eye has a `1/4'' type' sensor which is only an indication of its true di
 
 \begin{table}
 \begin{center}
-\begin{tabular}{|c|c|c|c|}
-\hline
+\begin{tabularx}{\textwidth}{c *{4}{>{\centering\arraybackslash}X}}
+\toprule
 \textbf{Focal length (mm)} & \textbf{Diagonal FOV (\textdegree)} & \textbf{Horizontal FOV (\textdegree)} & \textbf{Vertical FOV (\textdegree)} \\
-\hline
+\midrule
 2.5mm & 84    & 71.5 & 56.7 \\
 2.1mm & 93.9  & 81.2 & 65.5 \\
 2.0mm & 96.7  & 84   & 68 \\
 1.9mm & 99.6  & 86.9 & 70.8 \\
 1.8mm & 102.7 & 90   & 73.7 \\
 1.7mm & 105.9 & 93.3 & 76.9 \\
-\hline
-\end{tabular}
+
+\bottomrule
+
+\end{tabularx}
 \caption{FOV of various focal length lenses resolving onto a 1/4'' type sensor.}
 \label{fov-table}
 \end{center}
